# search-notice-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  search-notice.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  search-notice.rockspec  search-notice_sdk.lua  search-notice_types.lua
php/: AGENTS.md  CLAUDE.md  (+6 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  searchnotice_sdk.py  searchnotice_types.py
py/core/: context.py  control.py  helpers.py  operation.py  result.py  utility_type.py
py/entity/: search_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  proxy_feature.py  ratelimit_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: done.py  feature_add.py  fetcher.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_query.py  result_basic.py  result_body.py  result_headers.py  transform_request.py
(+400 files in other folders)
